# soc

./: CMakeLists.txt
EmbeddedSystemPractice/lab1/Part2/increment_leds/: .increment_leds.c.swp  a.out  increment_leds.c
EmbeddedSystemPractice/lab1/Part3/pushbutton_irq_handlers/: .pushbutton_irq_handler.ko.cmd  .pushbutton_irq_handler.mod.o.cmd  .pushbutton_irq_handler.o.cmd  modules.order  pushbutton_irq_handler.c  pushbutton_irq_handler.ko
EmbeddedSystemPractice/lab1/Part3/pushbutton_irq_handlers/.tmp_versions/: pushbutton_irq_handler.mod
EmbeddedSystemPractice/lab2/part1/CodeBlockProject/lab2part1/: a.out  lab2part1.cbp  lab2part1.depend  lab2part1.layout  main.c
apps/: CMakeLists.txt
apps/increment_leds/: CMakeLists.txt  increment_leds.cpp
cmake/: FindKernelHeaders.cmake
modules/: .gitignore  CMakeLists.txt
modules/hello/: CMakeLists.txt  hello.c
modules/memtool/: CMakeLists.txt  soc_mem_utils.cpp  soc_mem_utils.h
modules/socsys/: CMakeLists.txt
